samples/sample_target_outputs/out10.txt

Farthest parse stack:
  ['phrase', 'statement', 'there\n']
Farthest token mismatch:
  Token 'there\n' vs Code 'ther'
Error point:
* hello
  ^
  |
  parse began here
* ther
  ^
  |
  parse failed here

Traceback (most recent call last):
  File "/usr/local/bin/water", line 65, in <module>
    parse.runfile(sys.argv[1])
  File "/Users/tylerneylon/Dropbox/Documents/code/water/parse.py", line 355, in runfile
    for tree in iterate(filename):
  File "/Users/tylerneylon/Dropbox/Documents/code/water/parse.py", line 351, in iterate
    raise ParseError(error_fmt % (line_num, char_offset))
parse.ParseError: Parsing failed on line 12, character 1
